@@ -25,7 +25,7 @@ public class UserMapper {
     public UserDto toDto(User user) {
         var userTeams = user.getUserTeamList().stream().map(
                 ut -> new UserTeamDto(ut.getId(), user.getVersion(), teamMapper.toDto(ut.getTeam()), ut.isTeamAdmin()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserDto(user.getId(), user.getVersion(), user.getFirstname(), user.getLastname(), user.getEmail(),
                 userTeams, user.isOkrChampion());
