@@ -12,6 +12,6 @@ public class CollectionUtils {
     public static <T> List<T> iterableToList(Iterable<T> iterable) {
         return StreamSupport //
                 .stream(iterable.spliterator(), false) //
-                .collect(Collectors.toList());
+                .toList();
     }
 }
